Player2 movement is setup. Refactored code so that move function is in base class. Fixed bug where scrolling body would misalign players on grid.

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
 
     height: 100vh;
     position: relative;
-
+    overflow: hidden;
 }
 
 .game-board {
@@ -26,7 +26,6 @@ body {
 
 .player-one {
     background-color: orange;
-    transition: transform 0.1s ease-out;
     width: 50px;
     height: 50px;
     z-index: 1;
@@ -37,4 +36,6 @@ body {
     background-color: lime;
     width: 50px;
     height: 50px;
+    z-index: 1;
+    position: fixed;
 }
